<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_casino4"
    tools:context=".Menu">

    <Button
        android:id="@+id/buttonJugar"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnJugar"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRanking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRanking"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnRanking"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCredito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJugar" />

    <Button
        android:id="@+id/buttonCredito"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnCredito"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonReglas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRanking" />

    <Button
        android:id="@+id/buttonReglas"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnReglas"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfiguracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCredito" />

    <Button
        android:id="@+id/buttonConfiguracion"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnConfiguracion"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPuntuar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReglas" />

    <Button
        android:id="@+id/buttonPuntuar"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnPuntuar"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfiguracion" />

    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnSalir"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPuntuar" />
</androidx.constraintlayout.widget.ConstraintLayout>