<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_casino4"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="376dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange_900"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="376dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange_900"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsuario"
        app:layout_constraintStart_toStartOf="@+id/editTextUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange_700"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btnLogin"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange_700"
        android:text="@string/btnRegistrarse"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>